# ax_adv_mini_coder

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  lite_llm_config.yaml  main.py  oneshot_setup.sh  pyproject.toml  test_or.py  walk_through.md  web_app.py
projects/memory/: AGENTS.md  CODER.md  PLANNER.md  REVIEWER.md  personal.md  project.md
projects/projects/json-to-markdown-table/: README.md  main.py
skills/call-subagent/: SKILL.md
src/: _llm.py  coding_agent.py  config.py  memory_pg.py  state_models.py  subagents.py
src/agents/: __init__.py  coding_agent.py  config.py  memory_pg.py  state_models.py  subagents.py
templates/: index.html  index_bak.html
